# prml

./: .gitignore  README.md  data.py  main.py  pyproject.toml
Project_page/: homepage.html  styles.css
deploy/: Dockerfile  main.py  pyproject.toml
deploy/app/: main.py
deploy/app/models/: image_retriever.py
deploy/app/static/css/: styles.css
deploy/app/static/js/: script.js
deploy/app/templates/: index.html
experiments/: kMeans.ipynb  mlp.ipynb  svm.ipynb
src/: bovw.py  clustering.ipynb  cnn.ipynb  cnn_feature_ext.py  data.py  features.ipynb  helper.py  hog_feature_extraction.py  main.py  notebook37029cb3a3 (1).ipynb  vlad.py
src/BoVW/: cluster_analysis.ipynb  main.ipynb  main.py
src/features/: extractor.py
src/utils/: KNN.py  gmm.py  kmeans.py  utils.py
visualization_codes/: hog_visualizer.py
