[project]
name = "deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.1.0",
    "jinja2>=3.1.6",
    "joblib>=1.4.2",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "tensorflow-cpu>=2.18.0",
    "uvicorn>=0.34.0",
]
